--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,8 @@ spring:
     url: jdbc:postgresql://localhost:5432/postgres
     password: postgres
     username: postgres
+
+  data:
+    web:
+      pageable:
+        default-page-size: 20
